# snitch

./: .gitignore  README.md  pyproject.toml
src/snitch/: __init__.py  cli.py  config.py  ignore.py  registry.py
src/snitch/analyzers/: _walk.py  js_ast.py  patterns.py  py_ast.py
src/snitch/collectors/: base.py  binaries.py  brew.py  github_repos.py  go.py  npm.py  pip.py  vscode.py
src/snitch/core/: cache.py  findings.py  orchestrator.py  progress.py  report.py  scoring.py
src/snitch/heuristics/: common.py  npm_rules.py  pip_rules.py
src/snitch/intel/: malicious_packages.py  osv.py  typosquat.py  virustotal.py
tests/: conftest.py  test_analyzers.py  test_cache.py  test_collectors_npm.py  test_config.py  test_findings.py  test_heuristics.py  test_ignore.py  test_intel.py
